--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ dataclasses-json>=0.6.0
 # Optional: For future testing
 # pytest>=7.0.0
 # pytest-cov>=4.0.0
+setuptools
 
 # Optional: For future CLI development
 # click>=8.0.0
