--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,13 @@ typing-extensions>=4.0.0
 # Data handling
 dataclasses-json>=0.6.0
 
+# Environment variable loading
+python-dotenv>=1.0.0
+
+# API clients for LLM integration
+openai>=1.0.0
+anthropic>=0.7.0
+
 # Optional: For future JSON schema validation
 # jsonschema>=4.0.0
 
@@ -21,3 +28,9 @@ setuptools
 # Optional: For future data export formats
 # pyyaml>=6.0.0
 # openpyxl>=3.1.0
+
+# PDF to Markdown conversion
+replicate>=0.25.0
+pdf2image>=1.16.3
+pillow>=10.0.0
+poppler-utils  # System dependency note - see README
