--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,6 @@ replicate>=0.25.0
 pdf2image>=1.16.3
 pillow>=10.0.0
 poppler-utils  # System dependency note - see README
+
+# OCR and API requests
+requests>=2.31.0
