feat: Implement Qwen + FAISS RAG system for enhanced vector similarity search
- Added QwenFAISSRAG class for embedding queries and performing FAISS searches with category filtering.
- Developed script to build FAISS index and metadata from rulebook sections using Qwen embeddings.
- Integrated error handling for missing dependencies and loading issues.
- Implemented normalization for cosine similarity in FAISS searches.
- Created category index for efficient filtering during searches.
- Saved FAISS index and metadata to specified output directory.

--- a/574-Assignment/requirements.txt
+++ b/574-Assignment/requirements.txt
@@ -1,4 +1,4 @@
-pymilvus==2.4.0              # Milvus Lite
+faiss-cpu>=1.7.4             # FAISS vector similarity search
 transformers>=4.36.0         # Qwen model
 torch>=2.0.0                 # PyTorch backend (flexible version)
 sentence-transformers>=2.2.2 # Easier model interface
@@ -10,3 +10,4 @@ seaborn                      # Enhanced plots
 jupyter                      # Notebook for analysis
 python-dotenv               # Environment variables
 scipy                        # For rank correlation (Spearman)
+sqlalchemy[asyncio]>=2.0.0   # Async ORM support used by shared utils
