--- a/574-Assignment/pyproject.toml
+++ b/574-Assignment/pyproject.toml
@@ -2,9 +2,9 @@
 name = "574-assignment-rag-comparison"
 version = "0.1.0"
 description = "D&D 5e RAG System Comparison Framework"
-requires-python = ">=3.12,<3.13"
+requires-python = "==3.12.*"
 dependencies = [
-    "pymilvus[milvus_lite]>=2.4.0",
+    "faiss-cpu>=1.7.4",
     "sentence-transformers>=2.2.2",
     "torch>=2.0.0",
     "transformers>=4.36.0",
@@ -14,6 +14,7 @@ dependencies = [
     "matplotlib>=3.7.0",
     "scipy>=1.11.0",
     "python-dotenv>=1.0.0",
+    "sqlalchemy[asyncio]>=2.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
