--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "shadowscribe"
 version = "2.0.0"
 description = "Comprehensive D&D/RPG character management system with RAG-powered knowledge base"
-requires-python = ">=3.12"
+requires-python = "==3.12.*"
 dependencies = [
     "typing-extensions>=4.0.0",
     "dataclasses-json>=0.6.0",
@@ -15,6 +15,7 @@ dependencies = [
     "pillow>=10.0.0",
     "requests>=2.31.0",
     "numpy>=1.24.0",
+    "sqlalchemy[asyncio]>=2.0.0",
 ]
 
 [build-system]
