--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,11 @@ dependencies = [
     "requests>=2.31.0",
     "numpy>=1.24.0",
     "sqlalchemy[asyncio]>=2.0.0",
+    # Local classifier dependencies
+    "torch>=2.0.0",
+    "transformers>=4.30.0",
+    "scikit-learn>=1.3.0",
+    "safetensors>=0.4.0",
 ]
 
 [build-system]
