--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "transformers>=4.30.0",
     "scikit-learn>=1.3.0",
     "safetensors>=0.4.0",
+    "dacite>=1.9.2",
 ]
 
 [build-system]
